# kokkos-tools-sqlite

./: CMakeLists.txt  Dockerfile  README.md  kts.cpp  kts.hpp  kts_mpi.cpp  kts_pid.cpp  kts_pid.hpp  lib.cpp  lib.hpp  main.cpp
.github/workflows/: cross-platform.yaml  ubuntu-openmpi.yml
lib/: CMakeLists.txt  kts_schema.cpp  kts_schema.hpp
perf_test/: CMakeLists.txt  perf_alloc.cpp  perf_deepcopy.cpp  perf_events.cpp  perf_fence.cpp  perf_main.hpp  perf_parfor.cpp  perf_spans.cpp
unit_test/: CMakeLists.txt  test_deep_copy.cpp  test_event.cpp  test_parfor.cpp  test_parred.cpp  test_parscan.cpp  test_view_init.cpp
